--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ h4 {
 }
 
 a {
-    color: #2196F3;
+    color: #00B0BB;
     -webkit-transition: all 0.2s linear;
     -moz-transition: all 0.2s linear;
     -o-transition: all 0.2s linear;
@@ -549,7 +549,7 @@ a.back-to-top:focus {
 }
 
 .navbar-expand-lg .navbar-nav .nav-link:hover {
-    color: #2196F3 !important;
+    color: #00B0BB !important;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link .ripple-container {
@@ -2092,7 +2092,7 @@ ul.recent-post li .post-text span {
 
 .footer-copyright {
     line-height: 45px;
-    background: #000000;
+    background: #00B0BB;
     color: #999;
 }
 
@@ -2667,4 +2667,19 @@ ul.recent-post li .post-text span {
     font-size: 3em;
     font-weight: 500;
     color: #999999;
+}
+
+
+
+/* ///// header//// */
+.login{
+    border: 2px solid #00B0BB;
+    color: #00B0BB !important;
+}
+.login:hover{
+    background-color: #00B0BB !important;
+    color: white !important;
+}
+.footer-logo{
+    margin-top: -15px;
 }
