--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2870,6 +2870,9 @@ p{
 .mortgage-process a{
     border:  2px solid white;
 }
+.recent-widget{
+    padding-top: 67px;
+}
 /* ///////////// media querries of index page ///////// */
 @media screen and (min-width:250px) and (max-width:1000px) {
     .dots img {
@@ -4227,6 +4230,9 @@ input[type=checkbox], input[type=radio] {
 }
 }
 @media screen and (min-width:200px) and (max-width:767px) {
+    .recent-widget{
+        padding-left: 0px !important;
+    }
     .back-to-top{
         display: none !important;
     }
@@ -4280,7 +4286,25 @@ input[type=checkbox], input[type=radio] {
         font-size: 18px;
     }
 }
+@media screen and (min-width:768px) and (max-width:850px){
+    .properties-slider .card {
+      width: 210px !important;
+    }
+    .properties-slider img {
+        height: 170px;
+    }
+    .slick-prev {
+        left: -33px;
+    }
+    .slick-next {
+        right: -27px;
+    }
+}
 @media screen and (min-width:768px) and (max-width:900px) {
+    .page-footer p {
+        line-height: 0px;
+        font-size: 15px !important;
+    }
     .properties-links h1 {
         font-size: 40px;
         line-height: 40px;
@@ -4310,9 +4334,19 @@ input[type=checkbox], input[type=radio] {
     .property-brand img{
         width: 100%;
     }
+    .footer-contact-widget img{
+        width: 100% !important;
+    }
+    .recent-widget{
+        padding-top: 0px !important;
+    }
 }
 
 @media screen and (min-width:901px) and (max-width:1000px) {
+    .page-footer p {
+        line-height: 0px;
+        font-size: 15px !important;
+    }
     .property-brand img{
         width: 100%;
     }
@@ -4332,6 +4366,22 @@ input[type=checkbox], input[type=radio] {
     .properties-links a {
             padding: 10px 10px;
        }
+    .properties-slider .card {
+        width: 210px !important;
+       }    
+       .properties-slider .card .card-title {
+        font-size: 15px;
+        line-height: 15px;
+    }
+    .properties-slider img {
+        height: 190px;
+    }    
+    .properties-slider .card h5 {
+        font-size: 15px;
+    }
+    .properties-slider .card h6 {
+        font-size: 14px;
+    }
 }
 @media screen and (min-width:1001px) and (max-width:1050px) {
     .slick-prev {
@@ -4367,6 +4417,72 @@ input[type=checkbox], input[type=radio] {
         font-size: 15px !important;
     }
 }
+@media screen and (min-width:350px) and (max-width:550px)
+{
+    .slick-prev {
+        left: -10px;
+        top: 230px;
+        z-index: 1;
+    }
+    .slick-next {
+        right: 0px;
+        top: 230px;
+        z-index: 1;
+    }
+}
+@media screen and (min-width:350px) and (max-width:360px) {
+    .properties-slider .card {
+        width: 330px !important;
+        margin: 0px;
+    }
+}
+@media screen and (min-width:361px) and (max-width:375px) {
+    .properties-slider .card {
+        width: 345px !important;
+        margin: 0px;
+    }
+}
+@media screen and (min-width:376px) and (max-width:390px) {
+    .properties-slider .card {
+        width: 360px !important;
+        margin: 0px;
+    }
+   
+}
+@media screen and (min-width:391px) and (max-width:399px) {
+   
+    .properties-slider .card {
+        width: 363px !important;
+        margin: 0px;
+    }
+}
+@media screen and (min-width:401px) and (max-width:412px) {
+    .properties-slider .card {
+        width: 382px !important;
+        margin: 0px;
+    }
+}
+@media screen and (min-width:413px) and (max-width:420px) {
+    .properties-slider .card {
+        width: 382px !important;
+        margin: 0px;
+    }
+}
+@media screen and (min-width:500px) and (max-width:550px) {
+    .properties-slider .card {
+        width: 510px !important;
+        margin: 0px;
+    }
+}
+.search-properties{
+    background-color:  rgba(0, 0, 0, 0.54) !important;
+}
+.back-to-top{
+    display: none;
+}
+.properties-margin{
+    margin-bottom: 90px;
+}
 /* //////// finance page ////// */
 .hero-section{
     background-image: url('/assets/images/finance/Rectangle 163.png');
@@ -4375,6 +4491,7 @@ input[type=checkbox], input[type=radio] {
 .hero-section .wrapper{
     background-color: rgba(0, 0, 0, 0.6);
 }
+.financing-hero-section,
 .hero-section .wrapper h1{
     font-family: 'Merriweather' !important;
     font-style: normal;
@@ -4383,7 +4500,7 @@ input[type=checkbox], input[type=radio] {
     line-height: 70px;
     text-align: center;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    padding-top: 3.5rem;
+    padding-top: 2.5rem;
 }
 .hero-section .wrapper p{
     font-family: 'Open Sans';
@@ -4624,7 +4741,7 @@ input[type=checkbox], input[type=radio] {
 @media screen and (min-width: 1800px) and (max-width: 2000px)
 {
     .hero-section .wrapper p {
-     font-size: 2.5rem;
+     font-size: 2.9rem;
      line-height: 40px;
    }
    .buying-section .wrapper p{
@@ -4712,7 +4829,74 @@ input[type=checkbox], input[type=radio] {
         line-height: 22px;
     }
 }
+/* //////// financing ortgage calculator //////// */
+.financing-hero-section {
+    background-color: #00b0bb !important;
+    padding-bottom: 40px;
+}
+.financing-hero-section .wrapper{
+    background-color: transparent !important ;
+}
+.financing-hero-section .wrapper p {
+    padding-left: 5rem ;
+    font-size: 1.525rem;
+    padding-right: 9rem ;
+    padding-top: 1rem;
+    font-size: 1.7rem ;
+    line-height: 35px;
+    font-weight: 600;
+    text-align: center;
+}
+.finance-vector {
+    position: relative;
+}
+.finance-vector .text{
+    font-family: 'Gordita';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 27px;
+    line-height: 30px;
+    text-align: center;
+    color: #454545;
+    position: absolute;
+    top: 44%;
+    left: 0px;
+    text-align: center;
+    padding-right: 2rem;
+}
+.finance-vector img{
+    width: 225px;
+}
 
+@media screen and (min-width: 2000px) and (max-width: 2200px) {
+    .financing-hero-section .wrapper p{
+        font-size: 3.2rem;
+        line-height: 50px;
+        font-weight: 500;
+    }
+    .financing-hero-section .wrapper h1{
+        font-size: 3rem;
+    }
+}
+@media screen and (max-width: 576px) {
+    .financing-hero-section .wrapper h1{
+        padding-top: 1rem;
+    }
+    .financing-hero-section .wrapper p{
+        padding: 0rem 1rem;
+        padding-bottom: 1rem;
+    }
+}
+@media screen and (max-width: 425px) {
+    .financing-hero-section .wrapper h1{
+        font-size: 1.5rem;
+        line-height: 25px;
+    }
+    .financing-hero-section .wrapper p{
+        font-size: 1rem;
+        padding-top: 1rem;
+    }
+}
 
 
 
