--- a/assets/css/partner.css
+++ b/assets/css/partner.css
@@ -1,9 +1,7 @@
 * {
-
     margin: 0;
     padding: 0;
 }
-
 .lead h1 {
     font-weight: bold;
 }
@@ -323,11 +321,11 @@ a.slide_btn {
 }
 
 @media screen and (max-width:550px) {
-    .png-1 {
+   .div15 .png-1 {
         height: 200px;
-        width: 230px;
+        width: 330px;
         margin-left: 100px;
-        margin-top: -130px;
+        margin-top: -360px;
     }
 
     .para {
@@ -351,7 +349,7 @@ a.slide_btn {
         background-color: white;
         height: 240px;
         width: 60%;
-        margin-left: 100px;
+        margin-left: 80px;
         padding-left: 0 !important;
         padding-right: 0 !important;
     }
@@ -565,7 +563,7 @@ ul li {
     color: #00B0BB;
     font-weight: bolder;
     font-size: larger;
-    margin-left: 130px;
+    margin-left: 110px;
 
 }
 
@@ -587,7 +585,18 @@ button {
 .map {
     width: 100%;
 }
+@media screen and (min-width:992px) and (max-width:1200px) {
+    .card i {
+        margin-left: 20px;
 
+    } 
+}
+@media screen and (min-width:768px) and (max-width:991px) {
+    .card i {
+        margin-left: 210px;
+
+    } 
+}
 @media screen and (min-width:550px) and (max-width:767px) {
     .div-9 {
         padding-top: 20px;
@@ -614,7 +623,7 @@ button {
 
 @media screen and (max-width:550px) {
     .card i {
-        margin-left: 80px;
+        margin-left: 50px;
     }
 
     .main {
@@ -803,7 +812,7 @@ button {
         width: 100%;
     }
     .div-10{
-        padding-top: 250px;
+        padding-top: 230px;
     }
     .form-2{
         padding-top: 30px;
@@ -860,3 +869,4 @@ button {
         padding-bottom: 1rem;
     }
 }
+
