--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -222,6 +222,7 @@
     }
     .page-footer .footer-title {
         margin-top: 30px;
+        font-size: 30px;
     }
     .work-counter-widget {
         margin: 20px 0;
