--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2739,9 +2739,9 @@ p{
 }
 .box-left{
     background-color: #00B0BB;
-    padding-left: 117px;
-    padding-right: 117px;
+    padding:25px 40px 54px 40px !important;
     border-radius: 20px;
+    margin-top: 72px !important;
 }
 .index-loan{
     padding: 60px 0px;
@@ -2758,14 +2758,21 @@ p{
 }
 .box-right-1 {
     background-color: #3A3D3E;
-    padding-left: 117px;
-    padding-right: 117px;
+    padding:30px 40px !important;
     border-radius: 20px;
+}
+.box-right-1 h5{
+    font-size: 28px;
+}
+.box-right-2 h5{
+    font-size: 28px;
+}
+.box-left h5{
+    font-size: 28px;
 }
 .box-right-2 {
     background-color: #ffffff;
-    padding-left: 117px;
-    padding-right: 117px;
+    padding: 30px 40px !important;
     border-radius: 20px;
     margin-top: 29px;
 }
@@ -5499,7 +5506,7 @@ ul li {
 
 button {
     text-decoration: none !important;
-    color: black !important;
+    /* color: black !important; */
     font-size: large !important;
 }
 
@@ -5793,11 +5800,23 @@ button {
     .invester-row{
         padding-top: 1rem !important;
     }
+    .estimate-para{
+        text-align: start !important;
+        padding: 15px 0px 0px 0px !important;
+    }
+    .vector-1 img{
+        display: none;
+    }
 }
 @media screen and (max-width: 576px){
     .invester-row img{
         padding-bottom: 1rem;
     }
+    .testimonial .item {
+        margin-right: 0px !important;
+    }
+    
+    
 }
 .contactus-career{
     padding-bottom: 90px !important;
@@ -5920,6 +5939,136 @@ color: white !important;
    background-color: #00B0BB !important;
    color: white !important;
 }
+/* ////// queries on 67% screen //// */
+@media screen and (min-width:2000px) and (max-width:2100px) {
+    p{
+        font-size: 24px !important;
+        line-height: 30px !important;
+    }
+    .modren-vector-content{
+        bottom: 65px;
+    }
 
-
-
+    .hero-heading{
+        font-size: 55px;
+    }
+    .team-member-info h6 {
+        font-size: 25px;
+        opacity: 0.7;
+    }
+    .martal-button{
+        padding: 10px 45px !important;
+        font-size: 25px;
+    }
+    .paragraph{
+        font-size: 20px !important;
+        padding-top: 15px;
+    }
+    .about-1 h5{
+        font-size: 25px;
+    }
+    .about-us-img{
+        height: 500px !important;
+    }
+    .box-left{
+        margin-top: 194px !important;
+    }
+    .box-right-2{
+        padding: 42px 60px 25px 60px !important;
+    }
+    .box-right-1{
+        padding: 40px 60px !important;
+    }
+    .box-left{
+        padding: 40px 60px !important;
+    }
+    .vector img {
+        position: absolute;
+        left: -85px;
+        top: 40px;
+        height: 410px;
+    }
+    .vector-1 img {
+        position: absolute;
+        left: -160px;
+        top: -30px;
+        height: 440px;
+    }
+    .login{
+        font-size: 20px;
+    }
+}
+.estimate-para {
+    text-align: center;
+    font-size: 32px !important;
+    line-height: 35px !important;
+    /* padding-top: 10px; */
+    padding: 10px 80px 0px 80px;
+}
+/* ///// homepage 2 //// */
+.hm-2{
+    background-image: url("/assets/images/index-images/home-2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 700px; 
+}
+.hm-2 h5{
+    font-size: 30px;
+}
+.hm-2 h1{
+    font-size: 70px;
+    font-family: Gordita !important;
+}
+.looking{
+    border-radius: 100px;
+    max-width: 950px;
+    margin: auto;
+    background: white;
+    /* position: absolute;
+    top: -100px; */
+    margin-top: -90px;
+}
+.looking button{
+    border-radius: 100px;
+    font-weight: bolder;
+}
+.chooses .card{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+.homepage-2-head{
+    padding-top: 220px;
+}
+.hm-2 a{
+    background-color: #00B0BB;
+    font-size: 20px;
+}
+.hm-2 a:hover{
+    background-color: white;
+    color: black !important;
+}
+.hm-2  .bgimage-wrapper{
+    height: 700px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.home2-aboutus{
+    padding-top: 100px;
+}
+.looking button{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px !important;
+    padding: 15px 70px;
+    font-size: 20px !important;
+}
+.just-explore{
+    padding: 30px 70px !important;
+}
+.looking{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px !important;
+}
+.looking-property{
+    background-color: #00B0BB;
+}
+.looking button:hover{
+    background-color: #00B0BB !important;
+    color: white !important;
+}
