--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2861,13 +2861,17 @@ p{
 }
 .loan-calculator-side span{
     line-height: 35px;
+    font-size: 20px;
 }
+/* .est-mort .loan-calculator-side span{
+    line-height: 50px;
+} */
 .loan-calculator-side span strong{
-    font-size: 44px;
-    line-height: 43px;
+    font-size: 57px;
+    line-height: 50px;
 }
 .loan-calculator-side p{
-    font-size: 17px !important;
+    font-size: 18px !important;
     line-height: 22px !important;
     font-weight: 500 !important;
 }
@@ -6071,4 +6075,17 @@ color: white !important;
 .looking button:hover{
     background-color: #00B0BB !important;
     color: white !important;
+}
+.est-mort{
+    background-color: #f3f3f3;
+}
+.est-mort .resident{
+    padding: 32px;
+}
+.est-start{
+    padding-left: 250px;
+    padding-right: 250px;
+    background-color: #00B0BB !important;
+    color: white;
+    font-size: 35px;
 }
